--- a/spring-security-db/src/main/resources/application.properties
+++ b/spring-security-db/src/main/resources/application.properties
@@ -2,3 +2,9 @@ spring.datasource.url=jdbc:mysql://localhost:3306/security?useSSL=false
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=qq18717128499
+
+
+spring.redis.port=6379
+spring.redis.host=192.168.1.106
+spring.redis.password=123
+spring.redis.database=0
